Add search functionality and routers

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,3 +2,9 @@
   color: white;
   padding: 40px;
 }
+
+.search-line {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
